@@ -13,7 +13,8 @@
   Add icondir and sharedir install options
   Install basic doc in sharedir
   Move gps_data_t->status to gps_fix_t.status for better fix merging
-  The gps python module is now pure python. Delete any old packet*so.
+  The gps python module is now pure python. Manually delete any old packet*so.
+  Add wspeedt, wspeedr, wanglem, wanglet, wangler to  gps_fix_t
 
 3.20: 2019-12-31
   Change README into an asciidoc file and publish HTML from it
